src/objects/Merchandise__c.object
<CustomObject>
	<fields>
		<fullName>Condition__c</fullName>
		<label>Condition</label>
		<picklist>
			<picklistValues>
				<fullName>New</fullName>
				<default>true</default>
			</picklistValues>
			<picklistValues>
				<fullName>Used</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Refurbished</fullName>
			</picklistValues>
		</picklist>
		<type>Picklist</type>
	</fields>
	<fields>
		<fullName>Price__c</fullName>
		<label>Price</label>
		<precision>18</precision>
		<scale>2</scale>
		<type>Currency</type>
	</fields>
	<fields>
		<fullName>Quantity__c</fullName>
		<label>Quantity</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Warehouse__c</fullName>
		<label>Warehouse</label>
		<referenceTo>Warehouse__c</referenceTo>
		<relationshipLabel>Merchandise</relationshipLabel>
		<relationshipName>Merchandise</relationshipName>
		<relationshipOrder>0</relationshipOrder>
		<type>MasterDetail</type>
	</fields>
	<label>Merchandise</label>
	<listViews>
		<fullName>All</fullName>
		<filterScope>Everything</filterScope>
		<label>All</label>
	</listViews>
	<nameField>
		<label>Merchandise Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>Merchandise</pluralLabel>
	<sharingModel>ControlledByParent</sharingModel>
</CustomObject>